# cardano-rosetta-java

./: .env  .env.IntegrationTest  .env.docker-compose  .env.docker-compose-preprod  .env.docker-compose-profile-7-ultra-performance  .env.docker-compose-profile-advanced-level  .env.docker-compose-profile-basic-hardware  .env.docker-compose-profile-entry-level  .env.docker-compose-profile-mid-level  .env.docker-compose-profile-top-tier-hardware  .env.docker-compose-profile-ultra-performance  .env.dockerfile  .env.example  .env.h2  .env.h2-testdata  .envIntegrationTest  .envMainnet  .envMainnetIntelliJ  .envPreprod  .fossa.yml  .gitignore  404.html  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  api.yaml  docker-api-indexer.yaml  docker-api.yaml  docker-common.yaml  docker-compose-api.yaml  docker-compose-index-applier.yaml  docker-compose-indexer.yaml  docker-compose-integration-test-indexer.yaml  docker-compose-monitor.yaml  docker-compose-node.yaml  docker-compose-offline.yaml  docker-compose-registry.yaml  docker-compose-snapshot.yaml  (+15 more)
.claude/: settings.local.json
e2e-tests/: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
e2e-tests/rosetta_client/: __init__.py  client.py  exceptions.py
e2e-tests/tests/: conftest.py  stake_operations.py  test_multi_asset_transactions.py  test_multi_io_transactions.py  test_stake_scenarios.py
e2e-tests/wallet_utils/: __init__.py  pycardano_wallet.py
tests/data-endpoints/: .gitignore  README.md  TESTING_GUIDELINES.md  client.py  conftest.py  network_test_data.yaml  pyproject.toml  pytest.ini  test_account_endpoints.py  test_block_endpoints.py  test_error_handling.py  test_governance_metadata.py  test_network_endpoints.py  test_peer_discovery.py  test_search_transactions.py  test_smoke_network_data.py  test_token_registry.py
tests/e2e/: .env.example  .gitignore  README.md  __init__.py  conftest.py  prepare_wallet.py  pyproject.toml  pytest.ini
tests/e2e/rosetta_client/: __init__.py  client.py  exceptions.py  request_debugger.py
tests/e2e/test_utils/: __init__.py  log_formatter.py  operation_builders.py  signing_handler.py  transaction_orchestrator.py  utxo_selector.py
tests/e2e/tests/: conftest.py  test_multi_io_transactions.py  test_native_asset_transfer.py  test_pool_operations.py  test_stake_operations.py
tests/e2e/wallet_utils/: pycardano_wallet.py
tests/load-tests/: .env.example  .gitignore  README.md  analyze_dimensions.py  locustfile.py  main.py  populate_data.py  populate_test_data.py  pyproject.toml  soak_test.py  stability_test.py  test_data.py
tests/load-tests/data/mainnet/: dimensions.json
tests/load-tests/data/mainnet/addresses/: token_count_1.csv  token_count_10.csv  token_count_100.csv  token_count_1000.csv  token_count_10000.csv  tx_history_1.csv  tx_history_10.csv  tx_history_100.csv  tx_history_1000.csv  tx_history_10000.csv  utxo_count_1.csv  utxo_count_10.csv  utxo_count_100.csv  utxo_count_1000.csv  utxo_count_10000.csv
tests/load-tests/data/preprod/: dimensions.json
(+125788 files in other folders)
