[tool.poetry]
name = "cf-rosetta-e2e-tests"
version = "0.0.1"
description = "End-to-end tests for cardano-rosetta-java implementation"
authors = ["Lincon Vidal <lincon.vidal@cardanofoundation.org>"]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
pytest-xdist = "^3.5.0"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
pycardano = "^0.12.3"
typing-extensions = "^4.11.0"
assertpy = "^1.1"
mnemonic = "^0.21"
cbor2 = "^5.6.0"
pytest-order = "^1.3.0"

[tool.poetry.dev-dependencies]
black = "^24.4.0"
flake8 = "^7.0.0"
mypy = "^1.9.0"

# Define convenient test runner scripts
[tool.poetry.scripts]
test = "pytest:main"
test-verbose = "pytest:main(['--verbose'])"
test-debug = "pytest:main(['--verbose', '--log-cli-level=DEBUG'])"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Pytest configuration with improved organization
[tool.pytest.ini_options]
# Test discovery
testpaths = ["tests"]
python_files = "test_*.py"

# Asyncio configuration
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

# Logging configuration
log_cli = false
log_cli_level = "INFO"
log_level = "DEBUG"

# Execution options - all in one line for clarity
addopts = "--no-header --tb=short --no-summary -v --capture=no"

# Note: Some settings that can't be specified here are in pytest.ini
# See pytest.ini for additional configuration 