[project]
name = "data-endpoints"
version = "0.1.0"
description = "Python test suite for Cardano Rosetta data endpoints, replacing Postman collection tests"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "allure-pytest>=2.15.0",
    "httpx>=0.28.1",
    "jsonschema>=4.25.1",
    "pytest>=8.4.2",
    "pytest-xdist>=3.8.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
]
