[project]
name = "cardano-rosetta-e2e-tests"
version = "0.1.0"
description = "End-to-end tests for Cardano's Rosetta API implementation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "blockfrost-python>=0.6.0",
    "cbor2>=5.4.0",
    "mnemonic>=0.20",
    "pycardano>=0.9.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
    "pytest-order>=1.3.0",
    "pytest-xdist>=2.5.0",
    "python-dotenv>=0.19.0",
    "requests>=2.28.0",
    "rich>=13.0.0",
    "typing-extensions>=4.0.0",
]
